src/style.css
:root {
  font-family: 'Roboto Mono', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #006d64;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

* { margin: 0;}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  text-align: center;
}

body.no-overflow {
  overflow: hidden;
}

h1 {
  font-size: 4.6rem;
  line-height: 1.1;
  font-family: 'Bruno Ace SC', cursive;
}

input[type='number'] {
  -moz-appearance:textfield;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

button  {
  border-radius: 8px;
  border: 1px solid #1a1a1a;
  padding: 0.6rem 1.2rem;
  font-size: 1.5rem;
  line-height: 1;
  color: #1a1a1a;
}

#app {
  width: clamp(320px, 50%, 400px);
  margin: 0 auto;
  /* padding: 2rem; */

}

#map-container {
  display: none;

  position: fixed;
  inset: 0;

  flex-direction: column;
  align-items: center;

  background-color: rgba(26,26,26,0.5);
}

#map-container.active {
  display: flex;
}

#iframeMap {
  /* margin: auto; */
  height: 95%;
  width: 100%;
}

#map-container button {
  margin-block: 1rem;
  font-size: 1rem;
  /* position: absolute; */
  /* bottom: 2rem; */
}

.logo {
  height: 4rem;
  will-change: filter;
  transition: filter 300ms;
  margin: 0.75rem;
  border-radius: 1rem;
}
.card {
  font-size: 3rem;
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 1rem;
  margin-top: 1rem;
}

.card input {
  font-size: 1.5rem;
  line-height: 1;
  width: 1ch;
  margin: 0.25rem;
  padding: 0.25rem;
  font-family: 'Roboto Mono', system-ui, sans-serif;
  background-color: #ffffff;
  border: 1px solid #006d64;
  border-radius: 0.25rem;
}

#distance-input {
  width: 6ch;
  text-align: right;
}

.time-display, .distance-display, .distance-units {
  display: flex;
  align-items: center;
  justify-content: center;
}
.time-display span { font-size: 1.5rem;}

.distance-display, .distance-units {
  gap: 0.75rem;
}

#result {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6rem 1.2rem;
  font-size: 2.5rem;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  /* cursor: pointer; */
  color: #ffffff;

  display: flex;
  flex-direction: column;
}

#result.swap {
  flex-direction: column-reverse;
}

.secondary{
  font-size: 1.75rem;
}

.drop-shadow { box-shadow: 0 0 1rem -0.5rem #000; }

@media (prefers-color-scheme: light) {
  :root {
    color: #009f91;
    background-color: #ffffff;

  }
  .drop-shadow {
    box-shadow: 0 0 3rem -1rem #009f91;
  }

  .card input,
  .card input::placeholder{
    color: #009f91;
  }


}

